--- a/p/mainwindow.ui
+++ b/p/mainwindow.ui
@@ -100,7 +100,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -648,6 +648,12 @@
         <height>21</height>
        </rect>
       </property>
+      <property name="minimum">
+       <number>1</number>
+      </property>
+      <property name="maximum">
+       <number>3</number>
+      </property>
      </widget>
      <widget class="QLabel" name="label_19">
       <property name="geometry">
@@ -667,6 +673,19 @@
        <string>Num:</string>
       </property>
      </widget>
+     <widget class="QPushButton" name="btn_train_start">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>60</y>
+        <width>21</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>I</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_4">
      <attribute name="title">
@@ -678,7 +697,7 @@
         <x>10</x>
         <y>10</y>
         <width>141</width>
-        <height>61</height>
+        <height>41</height>
        </rect>
       </property>
       <property name="font">
@@ -691,13 +710,36 @@
       <property name="geometry">
        <rect>
         <x>160</x>
-        <y>20</y>
+        <y>10</y>
         <width>31</width>
         <height>41</height>
        </rect>
       </property>
       <property name="text">
        <string>T</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="cbb_load">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>60</y>
+        <width>141</width>
+        <height>21</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btn_load_config">
+      <property name="geometry">
+       <rect>
+        <x>160</x>
+        <y>60</y>
+        <width>21</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>L</string>
       </property>
      </widget>
     </widget>
@@ -805,20 +847,22 @@
        <rect>
         <x>380</x>
         <y>20</y>
-        <width>43</width>
-        <height>43</height>
+        <width>50</width>
+        <height>50</height>
        </rect>
       </property>
       <property name="styleSheet">
        <string notr="true"> background-color: #f7f8f9;
  border-style: solid;
  border-width:1px;
- border-radius:20.5px;
+ border-radius:24px;
  border-color: gray;
- max-width:41px;
- max-height:41px;
- min-width:41px;
- min-height:41px;</string>
+ max-width:48px;
+ max-height:48px;
+ min-width:48px;
+ min-height:48px;
+font-weight:bold;
+</string>
       </property>
       <property name="text">
        <string>Auto</string>
